@@ -942,7 +942,7 @@ widgets \\
 
 \hline
 
-\texttt{HOST} & sets the externally visible host name for requests
+\texttt{UNTRUSTED} & sets the externally visible host name for requests
 which are proxied to this widget.  This marks the widget as
 ``untrusted'' and disallows any other way of embedding it.  This is
 useful for widget code whose JavaScript must not be executed in the
