@@ -57,7 +57,10 @@ lookup_callback(const struct translate_response *response, void *ctx)
     }
 
     class = p_malloc(lookup->pool, sizeof(*class));
-    class->host = response->host;
+    class->untrusted_host = response->untrusted;
+    if (class->untrusted_host == NULL)
+        /* compatibility with v0.7.16 */
+        class->untrusted_host = response->host;
     class->stateful = response->stateful;
     resource_address_copy(lookup->pool, &class->address, &response->address);
     class->views = response->views != NULL
